--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.1",
@@ -18,6 +19,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-loader-spinner": "^5.3.4"
   },
   "devDependencies": {
